solved portfolio not visible completely

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -59,6 +59,10 @@ h1,h2,h3,h4,h5
         padding-top: 100px;
         padding-bottom: 120px;
     }
+    #portfolio{
+        padding-top: 80px;
+        padding-bottom: 120px;
+    }
 /* end all section */
 
 /* start simpletextrotator */
